完成博客的评论展示和回复功能，todo：评论删除（要不要删呢？）

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     date-format: yyyy-MM-dd
   main:
     allow-circular-references: true
+  redis:
+    host: 127.0.0.1
+    port: 6379
 #alicloud:
 #  oss:
 #    endpoint: oss-cn-nanjing.aliyuncs.com
