--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  security:
+    login:
+      page: /user/login
+    logout:
+      url: /user/logout
+      success-url: /user/login
 #alicloud:
 #  oss:
 #    endpoint: oss-cn-nanjing.aliyuncs.com
